--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
 
 [dependencies]
 gtmpl = { git = "https://github.com/fiji-flo/gtmpl-rust" }
+gtmpl_value = "0.1.0"
 lazy_static = "0.2"
-serde = "1.0"
-serde_json = "1.0"
+data-encoding = "2.0.0"
