update gtmpl versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,12 @@ license = "MIT"
 repository = "https://github.com/fiji-flo/sprig-rust"
 documentation = "https://docs.rs/crate/sprig"
 keywords = ["golang", "template", "templating", "sprig"]
-category = ["template-engine"]
 readme = "README.md"
 include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
 
 [dependencies]
-#gtmpl = { path = "../gtmpl-rust" }
-#gtmpl = "0.2"
-gtmpl = { git = "https://github.com/fiji-flo/gtmpl-rust", branch = "func-revamp" }
-#gtmpl_value = "0.1.0"
-#gtmpl_value = { path = "../gtmpl_value" }
-gtmpl_value = { git = "https://github.com/fiji-flo/gtmpl_value", branch = "map-n-novalue" }
-#gtmpl_value = "0.1"
+gtmpl = "0.3"
+gtmpl_value = "0.2"
 data-encoding = "2.0.0"
 itertools = "0.7.2"
 rand = "0.3"
