--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sprig"
-version = "0.2.0"
-authors = ["Florian Merz <me@fiji-flo.de>"]
+version = "0.3.0"
+authors = ["Florian Dieminger <me@fiji-flo.de>"]
 description = "Template functions for Go templates for Rust"
 license = "MIT"
 repository = "https://github.com/fiji-flo/sprig-rust"
@@ -12,8 +12,9 @@ include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
 edition = "2018"
 
 [dependencies]
-gtmpl = "0.6"
-gtmpl_value = "0.4"
+gtmpl_value = "0.5"
+gtmpl = "0.7"
 data-encoding = "2.0"
 itertools = "0.10"
 rand = "0.8"
+anyhow = "1"
